# Threat-Intel-Pipeline

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: team_demo_design_doc.md
scripts/: install_weekly_cron.sh  run_full_pipeline.sh  run_web_ui.sh  setup_local_env.sh
src/content_pipeline/: __init__.py  clustering.py  config.py  embeddings.py  rss_ingest.py  runner.py  scraper.py  utils.py  web_search.py
src/ta_pipeline/: __main__.py  app_config.py  cli.py  main.py  web_ui.py
src/ta_pipeline/agents/: executive_writer.py  scorer.py  ta_prep.py
src/ta_pipeline/llm/: client.py  executor.py  health.py  parser.py
src/ta_pipeline/models/: agent.py  task.py
src/ta_pipeline/pipeline/: cluster_analysis.py  content_stage.py  scoring_stage.py  selection.py  summary_stage.py  ta_brief_formatter.py
src/ta_pipeline/security/: __init__.py  audit_logger.py  integrity_checker.py  integrity_manifest.json  models.py  output_scanner.py  prompt_scanner.py
src/ta_pipeline/storage/: __init__.py  output_sync.py
src/ta_pipeline/tasks/: executive_summary.py  scoring.py  ta_prep.py
src/ta_pipeline/web_static/: app.css  app.js
src/ta_pipeline/web_templates/: index.html
tests/: test_app_config.py  test_article_selection.py  test_cluster_fallback.py  test_clustering_accuracy.py  test_output_sync.py  test_summary_stage.py  test_ta_brief_formatter.py  test_ta_cluster_selection.py  test_web_ui.py
